# RePORTaLiN-Agent

./: .dockerignore  .editorconfig  .gitignore  .nojekyll  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.uv  Makefile  README.md  __version__.py  claude_desktop_config.docker.json  claude_desktop_config.example.json  claude_desktop_config.json  config.py  docker-compose.secure.yml  llms.txt  main.py  pyproject.toml  requirements.txt  test_auth_verification.py  verify.py
.github/workflows/: auto-version-bump.yml  ci.yml  deploy-docs.yml  docs-quality-check.yml  release.yml
client/: __init__.py  __main__.py  agent.py  mcp_client.py  react_rag_agent.py  universal_client.py
client/examples/: basic_usage.py  query_clinical_data.py
docker/: Dockerfile  Dockerfile.secure
docs/: CONFIGURATION.md  DATA_PIPELINE.md  IMPLEMENTATION_PLAN.md  LOGGING_ARCHITECTURE.md  MCP_SERVER_SETUP.md  MIGRATION.md  TESTING_GUIDE.md
docs/sphinx/: Makefile  changelog.rst  conf.py  index.rst  license.rst
docs/sphinx/api/: __version__.rst  config.rst  doc_maintenance_toolkit.rst  main.rst  modules.rst  scripts.deidentify.rst  scripts.extract_data.rst  scripts.load_dictionary.rst  scripts.rst  scripts.utils.country_regulations.rst  scripts.utils.logging.rst  scripts.utils.rst
docs/sphinx/developer_guide/: architecture.rst  auto_documentation.rst  code_integrity_audit.rst  contributing.rst  doc_maintenance_toolkit.rst  documentation_style_guide.rst  extending.rst  future_enhancements.rst  git_workflow.rst  github_pages_deployment.rst  gitignore_verification.rst  historical_verification.rst  logging_system.rst  maintenance_summary.rst  production_readiness.rst  project_vision.rst  script_reorganization.rst  terminology_simplification.rst  version_bumping_quick_ref.rst  version_bumping_quick_reference.rst
docs/sphinx/user_guide/: configuration.rst  country_regulations.rst  deidentification.rst  installation.rst  introduction.rst  quickstart.rst  troubleshooting.rst  usage.rst
results/: metadata_summary.json  variable_map.json
results/data_dictionary_mappings/: baseline_demographics.jsonl  clinical_assessment.jsonl  laboratory_tests.jsonl  outcomes.jsonl
scripts/: __init__.py  deidentify.py  extract_data.py  load_dictionary.py  py.typed  run_agent.sh  verify_environment.sh  verify_mcp_runtime.py
scripts/core/: __init__.py  log_decryptor.py  settings.py  structured_logging.py
scripts/utils/: __init__.py  country_regulations.py  doc_maintenance_toolkit.py  logging.py  smart-commit.sh
server/: __init__.py  __main__.py  auth.py  config.py  data_pipeline.py  logger.py  main.py  tools.py
server/security/: __init__.py  encryption.py  middleware.py  py.typed  rate_limiter.py
shared/: __init__.py  constants.py  types.py
src/reportalin/: __init__.py  __main__.py
src/reportalin/cli/: pipeline.py
src/reportalin/client/: react_rag_agent.py  universal_client.py
src/reportalin/core/: config.py
src/reportalin/data/: deidentify.py  extract.py  regulations.py
src/reportalin/data/utils/: logging.py
src/reportalin/server/: __init__.py  __main__.py  auth.py  config.py  data_pipeline.py  logger.py  main.py
src/reportalin/server/security/: encryption.py  rate_limiter.py
src/reportalin/server/tools/: __init__.py  _analyzers.py  _loaders.py  _models.py  combined_search.py  prompt_enhancer.py  registry.py  search_cleaned_dataset.py  search_data_dictionary.py
tests/: __init__.py  conftest.py  test_server.py
tests/integration/: test_mcp_client.py  test_server_startup.py  test_simple_server.py  test_tool_call.py
tests/unit/: test_agent.py  test_auth.py  test_cli.py  test_config.py  test_deidentify.py  test_encryption.py  test_logger.py  test_mcp_client.py  test_mcp_server.py  test_property_based.py  test_rate_limiter.py  test_security.py  test_server.py
