[project]
name = "reportalin-specialist"
dynamic = ["version"]
description = "Clinical data processing pipeline for extraction, transformation, and de-identification"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "RePORTaLiN-Specialist Team"}
]
keywords = ["clinical", "data", "pipeline", "de-identification", "PHI", "PII", "HIPAA"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]

dependencies = [
    "pandas>=2.0.0,<2.3.0",
    "openpyxl>=3.1.0,<4.0.0",
    "numpy>=1.24.0,<2.0.0",
    "tqdm>=4.66.0,<5.0.0",
    "argcomplete>=3.0.0,<4.0.0",
    "cryptography>=41.0.0,<43.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.8.0",
    "commitizen>=3.29.0",
]

[project.scripts]
reportalin-specialist = "main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "__version__.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

# Black formatter configuration
[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | results
  | data
)/
'''

# Ruff linter configuration
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PGH",    # pygrep-hooks
    "PL",     # Pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "PERF",   # Perflint
    "FURB",   # refurb
    "LOG",    # flake8-logging
    "RUF",    # Ruff-specific rules
]

ignore = [
    "S101",    # Use of assert detected (OK in tests)
    "S311",    # Standard pseudo-random generators are not suitable for security/cryptographic purposes
    "S324",    # MD5 used for non-security hashing (OK for pseudonym generation)
    "PLR0912", # Too many branches (complex functions are OK for pipelines)
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements (complex functions are OK for pipelines)
    "PLR2004", # Magic value used in comparison
    "TRY003",  # Avoid specifying long messages outside the exception class
    "TRY300",  # Consider moving statement to else block
    "TRY401",  # Redundant exception in logging.exception
    "COM812",  # Missing trailing comma (conflicts with formatter)
    "ISC001",  # Implicit string concatenation (conflicts with formatter)
    "E501",    # Line too long (let formatter handle this, docstrings can be long)
    "G004",    # Logging statement uses f-string (f-strings are fine for logging)
    "DTZ005",  # datetime.now() without tz (OK for local timestamps)
    "DTZ007",  # Naive datetime in strptime (OK for date parsing)
    "EXE001",  # Shebang present but file not executable (OK for module scripts)
    "UP038",   # Use X | Y in isinstance (keep tuple for compatibility)
    "RUF005",  # Consider iterable unpacking (keep explicit for readability)
    "RUF022",  # __all__ not sorted (keep logical grouping)
    "SIM117",  # Use single with statement (nested is more readable sometimes)
    "B007",    # Loop variable not used (OK for enumerate counters)
    "F841",    # Local variable assigned but never used (OK for future use)
    "ARG002",  # Unused method argument (OK for interface consistency)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports OK in __init__
"tests/*" = ["S101", "ARG", "PLR2004"]
"scripts/*.py" = ["PTH123", "PTH103", "PTH118", "PTH110", "PTH112", "PTH109", "PTH100", "PTH120"]  # Allow os.path in scripts
"config.py" = ["PTH123", "PTH103", "PTH118", "PTH110", "PTH112", "PTH109", "PTH100", "PTH120"]  # Allow os.path in config
"main.py" = ["PTH123", "PTH103", "PTH118"]  # Allow os.path in main

[tool.ruff.lint.isort]
known-first-party = ["scripts", "config"]

# MyPy type checker configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "openpyxl.*",
    "tqdm.*",
    "argcomplete.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "security: marks tests as security-related",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["scripts"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 70
show_missing = true

# =============================================================================
# Commitizen - Automatic Semantic Versioning
# =============================================================================
# Commitizen enforces conventional commits and automates version bumping.
# Usage:
#   cz commit       - Interactive commit with conventional format
#   cz bump         - Auto-bump version based on commits (fix=patch, feat=minor, BREAKING=major)
#   cz changelog    - Generate/update CHANGELOG.md
#   cz check        - Validate commit message format

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "__version__.py:__version__",
    "pyproject.toml:version"
]
tag_format = "v$version"
bump_message = "bump: version $current_version → $new_version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
changelog_incremental = true
annotated_tag = true
major_version_zero = true  # Allow breaking changes in 0.x without major bump

# Commit types that trigger version bumps
[tool.commitizen.customize]
# feat: -> MINOR bump (new feature)
# fix:  -> PATCH bump (bug fix)
# BREAKING CHANGE: or feat!:/fix!: -> MAJOR bump

# =============================================================================
# Bandit - Security Linting
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv", "data"]
skips = ["B101"]  # Skip assert warnings (OK in non-production code)

[commitizen]
name = "cz_custom"
version = "2.0.0"
description = "Custom commitizen configuration"
tag_format = "v$VERSION"
tag_name = "v"
commit_message = "chore(release): version $VERSION"
changelog_file = "CHANGELOG.md"
commitizen_config = "pyproject.toml"
